[tool.poetry]
name = "017-processing-csv-files"
version = "0.1.0"
description = ""
authors = ["Eddie <eddie@5xcampus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
